--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>Application</mainClass>
+                            <mainClass>parser.Console</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
